# tvm-onnx-passthrough

./: CMakeLists.txt  make_test_model.py  pyproject.toml  test_model.onnx  tvm_master_doc_full.html
cpp/: module.cpp
src/tvm_onnx_passthrough/: api.py
