[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tvm-onnx-passthrough"
version = "0.1.0"
description = "Tiny TVM-like pass-through module backed by ONNX Runtime"
requires-python = ">=3.9"
dependencies = ["onnxruntime", "numpy"]

[tool.scikit-build]
wheel.packages = ["src/tvm_onnx_passthrough"]
